# ra_literag

./: .dockerignore  Dockerfile.compose  README.md  env.example  pyproject.toml
app/: __init__.py  config.py  config_reference.md  db_config.py  llm_client.py  main.py  workspace_config.py
docs/: doc_processing_openapi.json  llm_service_openapi.json  openapi.json  openapi.md  openapi.yaml  service.md
examples/: doc_processing_helpers.py  insert_content_list_example.py  lmstudio_integration_example.py  modalprocessors_example.py  raganything_example.py  vllm_integration_example.py
raganything/: parser.py  processor.py
scripts/: generate_openapi.py
tests/: test_callbacks.py
