[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ra-literag"
version = "0.1.0"
description = "FastAPI service wrapping RAGAnything (LightRAG + multimodal parsing)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # RAGAnything core (in-repo package `raganything`)
    "huggingface_hub",
    "lightrag-hku",
    "mineru[core]",
    "tqdm",
    "python-dotenv>=1.0.0",
    # FastAPI service (`app`)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Install with: uv sync --extra formats
formats = [
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "paddleocr>=2.7.0",
    "pypdfium2>=4.25.0",
    "markdown>=3.4.0",
    "weasyprint>=60.0",
    "pygments>=2.10.0",
]

[project.scripts]
ra-literag = "app.main:main"

[tool.setuptools.packages.find]
include = ["raganything*", "app*"]

[tool.setuptools]
include-package-data = true

# Optional: uv sync --group dev (tests only)
[dependency-groups]
dev = ["pytest>=6.0", "pytest-asyncio"]
